--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,12 +27,11 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    display: flex;
+    display: none;
+    /* JS tarafından flex yapılacak */
     justify-content: center;
     align-items: center;
     z-index: 2000;
-    opacity: 0;
-    pointer-events: none;
     transition: opacity 0.3s ease;
 }
 
